--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,10 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+#path config
+user.profile.image.path = images/users/
+
+#file config
+spring.servlet.multipart.max-file-size= 10MB
+spring.servlet.multipart.max-request-size= 10MB
